<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/heebo_regular"
                android:text="@string/how_was_your_experience_with_this_app"
                android:textColor="#000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/please_rate_us"
                android:textColor="#000"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:progressTint="@color/app_color"
                android:layout_margin="@dimen/_20sdp"
                android:numStars="5" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/give_rating"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textAllCaps="false"
                    android:background="@drawable/rounded_rate_app"
                    android:gravity="center"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/not_now"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_rate_grey"
                    android:gravity="center"
                    android:text="@string/not_now"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/splash_logo" />
</RelativeLayout>
</layout>