<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp56"
        android:paddingLeft="15dp"
        android:background="@color/app_color">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/dp5"
            android:src="@drawable/ic_arrow_back_black_24dp"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="50dp"
            android:fontFamily="@font/heebo_regular"
            android:text="@string/security"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_below="@+id/top_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/code_backup" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/animationView"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/heebo_regular"
        android:gravity="center"
        android:text="Code Recovery"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/s18" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:background="@drawable/direct_rounded"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:hint="@string/please_enter_your_date_of_birth"
            android:inputType="text"
            android:paddingTop="30dp"
            android:textSize="14dp"
            android:fontFamily="@font/heebo_regular"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/heebo_regular"
        android:gravity="center"
        android:text="@string/all_data_will_be_safe_in_your_device_we_dont_collect_any_information_from_you"
        android:textSize="12dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desc"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="@font/heebo_regular"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold" />
</RelativeLayout>
</layout>