<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@color/app_color">

        <ImageView
            android:id="@+id/back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"

            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:layout_toRightOf="@+id/back"
            android:fontFamily="@font/heebo_regular"
            android:text="@string/manage"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/check_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:layout_toStartOf="@+id/cbSelectAll"
            android:fontFamily="@font/heebo_regular"
            android:text="@string/select"
            android:textColor="@color/gesture_bg"
            android:textSize="16sp"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/cbSelectAll"
            android:layout_width="28sp"
            android:layout_height="28sp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:button="@drawable/contact_checked"
            android:buttonTint="@color/white" />
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/top_layout"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/no_data_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="@dimen/_20sdp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/quection" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/animationView"
            android:fontFamily="@font/heebo_regular"
            android:gravity="center"
            android:text="@string/no_private_chats_and_group_chats_added_yet_click_on_the_add_contact_button_to_add_group_or_private_chats"
            android:textSize="14dp" />

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_added"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/remove_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_button_drawable"
        android:fontFamily="@font/heebo_regular"
        android:text="@string/remove"
        android:textColor="@color/white" />
</RelativeLayout>
</layout>