<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/heebo_regular"
                android:gravity="center"
                android:text="ACCESSIBILITY PERMISSION CONSENT"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#eee" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/heebo_regular"
                    android:text="@string/des1"
                    android:textColor="#333"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/heebo_regular"
                    android:text="@string/des2"
                    android:textColor="#333"
                    android:textSize="13dp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/heebo_regular"
                    android:text="@string/des5"
                    android:textColor="#333"
                    android:textSize="13dp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/heebo_regular"
                    android:text="@string/des3"
                    android:textColor="#FA4A14"
                    android:textSize="11dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#eee" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FA4A14"
                    android:text="@string/des4"
                    android:textColor="#333"
                    android:textSize="13dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/checkBoxWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="  Please Agree To Use This Accessibility Permission"
                android:textColor="#FA4A14"
                android:visibility="gone"
                app:drawableLeftCompat="@drawable/ic_baseline_error_24"
                app:drawableStartCompat="@drawable/ic_baseline_error_24" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/declineButton"
                    android:layout_width="90dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    app:cardBackgroundColor="#777777"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Decline"
                        android:textColor="@color/white"
                        android:textSize="17sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/confirmButton"
                    android:layout_width="90dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    app:cardBackgroundColor="@color/bg_drk"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Accept"
                        android:textColor="@color/white"
                        android:textSize="17sp" />
                </androidx.cardview.widget.CardView>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learn_more_about_our"
                    android:textColor="#333"
                    android:textSize="13dp" />

                <TextView
                    android:id="@+id/privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Privacy Policy &amp; Terms"
                    android:textColor="#FA4A14"
                    android:textSize="13dp" />
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
