<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/app_color">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="30dp"
            android:layout_height="33dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/splash_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:layout_toRightOf="@id/logo"
            android:fontFamily="@font/heebo_regular"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/setting"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_menu_more" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/heading_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow_gold"
            android:fontFamily="@font/heebo_regular"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/having_trouple_in_locking_chats_and_groups_go_to_setting_and_restart_the_service"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/refresh"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:fontFamily="@font/heebo_regular"
                android:text="@string/added_contacts_groups"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/manage"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/manage_drawable"
                android:fontFamily="@font/heebo_regular"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/manage"
                android:textAllCaps="false"
                android:textColor="@color/app_color"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/heading_layout"
        android:id="@+id/no_data_found"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="@dimen/_20sdp"
        android:gravity="center_horizontal"

        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/quection" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/animationView"
            android:fontFamily="@font/heebo_regular"
            android:gravity="center"
            android:layout_margin="5dp"
            android:text="@string/no_private_chats_and_group_chats_added_yet_click_on_the_add_contact_button_to_add_group_or_private_chats"
            android:textSize="15dp" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/add_button"
        android:layout_below="@+id/heading_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/app_color"
        android:shadowColor="@color/app_color"
        android:src="@drawable/ic_my_icon"
        app:fabSize="normal"
        app:tint="@android:color/white" />




</RelativeLayout>
    </layout>